Closed Bug 1703592 Opened 3 years ago Closed 3 years ago

Assertion failure: false (MOZ_ASSERT_UNREACHABLE: Unknown value for meetOrSlice), at /builds/worker/checkouts/gecko/dom/svg/SVGContentUtils.cpp:703

Categories

(Core :: SVG, defect)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- wontfix
firefox88 --- wontfix
firefox89 --- fixed

People

(Reporter: jkratzer, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: assertion, regression, testcase, Whiteboard: [bugmon:bisected,confirmed], [wptsync upstream])

Attachments

(2 files, 1 obsolete file)

Attached file testcase.html (obsolete) —

Testcase found while fuzzing mozilla-central rev 8f7e11867d56 (built with --enable-debug).

Assertion failure: false (MOZ_ASSERT_UNREACHABLE: Unknown value for meetOrSlice), at /builds/worker/checkouts/gecko/dom/svg/SVGContentUtils.cpp:703

    #0 0x7f3971a74108 in mozilla::SVGContentUtils::GetViewBoxTransform(float, float, float, float, float, float, mozilla::SVGPreserveAspectRatio const&) /builds/worker/checkouts/gecko/dom/svg/SVGContentUtils.cpp:703:7
    #1 0x7f3971acb770 in mozilla::dom::SVGViewportElement::GetViewBoxTransform() const /builds/worker/checkouts/gecko/dom/svg/SVGViewportElement.cpp:194:10
    #2 0x7f3971acbe0a in mozilla::dom::SVGViewportElement::PrependLocalTransformsTo(mozilla::gfx::BaseMatrix<double> const&, mozilla::SVGTransformTypes) const /builds/worker/checkouts/gecko/dom/svg/SVGViewportElement.cpp:277:32
    #3 0x7f3972790e9d in mozilla::SVGDisplayContainerFrame::GetBBoxContribution(mozilla::gfx::BaseMatrix<float> const&, unsigned int) /builds/worker/checkouts/gecko/layout/svg/SVGContainerFrame.cpp:397:56
    #4 0x7f3972791117 in non-virtual thunk to mozilla::SVGDisplayContainerFrame::GetBBoxContribution(mozilla::gfx::BaseMatrix<float> const&, unsigned int) /builds/worker/checkouts/gecko/layout/svg/SVGContainerFrame.cpp
    #5 0x7f39727d1516 in mozilla::SVGUtils::GetBBox(nsIFrame*, unsigned int, mozilla::gfx::BaseMatrix<double> const*) /builds/worker/checkouts/gecko/layout/svg/SVGUtils.cpp:1049:12
    #6 0x7f39727d1149 in mozilla::SVGUtils::GetOuterSVGFrameAndCoveredRegion(nsIFrame*, nsRect*) /builds/worker/checkouts/gecko/layout/svg/SVGUtils.cpp:335:20
    #7 0x7f39725614eb in BoxToRect::AddBox(nsIFrame*) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:3704:23
    #8 0x7f3972561681 in BoxToRectAndText::AddBox(nsIFrame*) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:3765:16
    #9 0x7f39725392cb in GetAllInFlowBoxes /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:3649:5
    #10 0x7f39725392cb in nsLayoutUtils::GetAllInFlowRectsAndTexts(nsIFrame*, nsIFrame const*, mozilla::RectCallback*, mozilla::dom::Sequence<nsTString<char16_t> >*, unsigned int) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:3789:3
    #11 0x7f396f924269 in nsRange::CollectClientRectsAndText(mozilla::RectCallback*, mozilla::dom::Sequence<nsTString<char16_t> >*, nsRange*, nsINode*, unsigned int, nsINode*, unsigned int, bool, bool) /builds/worker/checkouts/gecko/dom/base/nsRange.cpp:2754:7
    #12 0x7f397254b8a2 in nsLayoutUtils::GetSelectionBoundingRect(mozilla::dom::Selection const*) /builds/worker/checkouts/gecko/layout/base/nsLayoutUtils.cpp:8977:7
    #13 0x7f39724845ec in mozilla::AccessibleCaretManager::DispatchCaretStateChangedEvent(mozilla::dom::CaretChangedReason) /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:1451:17
    #14 0x7f39724801d7 in mozilla::AccessibleCaretManager::UpdateCaretsForSelectionMode(mozilla::EnumSet<mozilla::AccessibleCaretManager::UpdateCaretsHint, unsigned char> const&) /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:376:5
    #15 0x7f3972482b6d in UpdateCarets /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:210:7
    #16 0x7f3972482b6d in mozilla::AccessibleCaretManager::OnReflow() /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:775:5
    #17 0x7f397247f389 in mozilla::AccessibleCaretEventHub::Reflow(double, double) /builds/worker/checkouts/gecko/layout/base/AccessibleCaretEventHub.cpp:607:11
    #18 0x7f39734cb92f in nsDocShell::NotifyReflowObservers(bool, double, double) /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp:1935:12
    #19 0x7f39734cba0f in non-virtual thunk to nsDocShell::NotifyReflowObservers(bool, double, double) /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp
    #20 0x7f397249b594 in mozilla::PresShell::DidDoReflow(bool) /builds/worker/checkouts/gecko/layout/base/PresShell.cpp:9405:15
    #21 0x7f39724a476d in mozilla::PresShell::ProcessReflowCommands(bool) /builds/worker/checkouts/gecko/layout/base/PresShell.cpp:9788:7
    #22 0x7f39724a3bb9 in mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush) /builds/worker/checkouts/gecko/layout/base/PresShell.cpp:4245:11
    #23 0x7f396f7739ee in FlushPendingNotifications /builds/worker/workspace/obj-build/dist/include/mozilla/PresShell.h:1408:5
    #24 0x7f396f7739ee in mozilla::dom::Document::FlushPendingNotifications(mozilla::ChangesToFlush) /builds/worker/checkouts/gecko/dom/base/Document.cpp:10548:16
    #25 0x7f397247fe4b in MaybeFlush /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:1051:12
    #26 0x7f397247fe4b in mozilla::AccessibleCaretManager::MaybeFlushLayout() /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:189:20
    #27 0x7f3972480184 in mozilla::AccessibleCaretManager::UpdateCaretsForSelectionMode(mozilla::EnumSet<mozilla::AccessibleCaretManager::UpdateCaretsHint, unsigned char> const&) /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:359:9
    #28 0x7f397247fcbb in mozilla::AccessibleCaretManager::UpdateCarets(mozilla::EnumSet<mozilla::AccessibleCaretManager::UpdateCaretsHint, unsigned char> const&) /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:210:7
    #29 0x7f397247fb68 in mozilla::AccessibleCaretManager::OnSelectionChanged(mozilla::dom::Document*, mozilla::dom::Selection*, short) /builds/worker/checkouts/gecko/layout/base/AccessibleCaretManager.cpp:171:3
    #30 0x7f396f83745b in mozilla::dom::Selection::NotifySelectionListeners() /builds/worker/checkouts/gecko/dom/base/Selection.cpp:3171:10
    #31 0x7f39725ff944 in NotifySelectionListeners /builds/worker/checkouts/gecko/layout/generic/nsFrameSelection.cpp:2143:23
    #32 0x7f39725ff944 in nsFrameSelection::EndBatchChanges(short) /builds/worker/checkouts/gecko/layout/generic/nsFrameSelection.cpp:2134:5
    #33 0x7f396f83a0ef in EndBatchChanges /builds/worker/checkouts/gecko/dom/base/Selection.cpp:3200:21
    #34 0x7f396f83a0ef in ~SelectionBatcher /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Selection.h:938:19
    #35 0x7f396f83a0ef in mozilla::dom::Selection::SetStartAndEndInternal(mozilla::dom::Selection::InLimiter, mozilla::RangeBoundaryBase<nsINode*, nsIContent*> const&, mozilla::RangeBoundaryBase<nsINode*, nsIContent*> const&, nsDirection, mozilla::ErrorResult&) /builds/worker/checkouts/gecko/dom/base/Selection.cpp:3477:1
    #36 0x7f396f839e13 in mozilla::dom::Selection::SelectAllChildren(nsINode&, mozilla::ErrorResult&) /builds/worker/checkouts/gecko/dom/base/Selection.cpp:2676:3
    #37 0x7f396f839d0c in mozilla::dom::Selection::SelectAllChildrenJS(nsINode&, mozilla::ErrorResult&) /builds/worker/checkouts/gecko/dom/base/Selection.cpp:2656:3
    #38 0x7f3970182eb7 in mozilla::dom::Selection_Binding::selectAllChildren(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&) /builds/worker/workspace/obj-build/dom/bindings/SelectionBinding.cpp:914:24
    #39 0x7f3970b11ffd in bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) /builds/worker/checkouts/gecko/dom/bindings/BindingUtils.cpp:3229:13
    #40 0x7f3973b5bef0 in CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:435:13
    #41 0x7f3973b5b65c in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:520:12
    #42 0x7f3973b5ce59 in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:580:10
    #43 0x7f3973b51b25 in CallFromStack /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:584:10
    #44 0x7f3973b51b25 in Interpret(JSContext*, js::RunState&) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:3244:16
    #45 0x7f3973b490e1 in js::RunScript(JSContext*, js::RunState&) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:405:13
    #46 0x7f3973b5b679 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:552:13
    #47 0x7f3973b5ce59 in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:580:10
    #48 0x7f3973b5d07f in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:597:8
    #49 0x7f39740d22db in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /builds/worker/checkouts/gecko/js/src/jsapi.cpp:2856:10
    #50 0x7f3970765dac in mozilla::dom::EventListener::HandleEvent(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/EventListenerBinding.cpp:58:8
    #51 0x7f3970eb9a66 in void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/EventListenerBinding.h:65:12
    #52 0x7f3970eb97ae in mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*) /builds/worker/checkouts/gecko/dom/events/EventListenerManager.cpp:1104:43
    #53 0x7f3970eba430 in mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool) /builds/worker/checkouts/gecko/dom/events/EventListenerManager.cpp:1301:17
    #54 0x7f3970eaf735 in HandleEvent /builds/worker/workspace/obj-build/dist/include/mozilla/EventListenerManager.h:390:5
    #55 0x7f3970eaf735 in mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&) /builds/worker/checkouts/gecko/dom/events/EventDispatcher.cpp:354:17
    #56 0x7f3970eaece3 in mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) /builds/worker/checkouts/gecko/dom/events/EventDispatcher.cpp:556:16
    #57 0x7f3970eb18e1 in mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) /builds/worker/checkouts/gecko/dom/events/EventDispatcher.cpp:1099:11
    #58 0x7f39725142c2 in nsDocumentViewer::LoadComplete(nsresult) /builds/worker/checkouts/gecko/layout/base/nsDocumentViewer.cpp:1087:7
    #59 0x7f39734e1b6f in nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult) /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp:6573:20
    #60 0x7f39734e1544 in nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp:5928:7
    #61 0x7f39734e24ef in non-virtual thunk to nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp
    #62 0x7f396eda2a0c in nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:1332:3
    #63 0x7f396eda1fba in nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:938:14
    #64 0x7f396eda0507 in nsDocLoader::DocLoaderIsEmpty(bool, mozilla::Maybe<nsresult> const&) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:757:9
    #65 0x7f396eda143d in nsDocLoader::OnStopRequest(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp:640:5
    #66 0x7f396eda1bdc in non-virtual thunk to nsDocLoader::OnStopRequest(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/uriloader/base/nsDocLoader.cpp
    #67 0x7f396dd121d6 in mozilla::net::nsLoadGroup::NotifyRemovalObservers(nsIRequest*, nsresult) /builds/worker/checkouts/gecko/netwerk/base/nsLoadGroup.cpp:616:22
    #68 0x7f396dd136e3 in mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult) /builds/worker/checkouts/gecko/netwerk/base/nsLoadGroup.cpp:523:10
    #69 0x7f396f776a11 in mozilla::dom::Document::DoUnblockOnload() /builds/worker/checkouts/gecko/dom/base/Document.cpp:11288:18
    #70 0x7f396f754150 in mozilla::dom::Document::UnblockOnload(bool) /builds/worker/checkouts/gecko/dom/base/Document.cpp:11218:9
    #71 0x7f396f765e36 in mozilla::dom::Document::DispatchContentLoadedEvents() /builds/worker/checkouts/gecko/dom/base/Document.cpp:7771:3
    #72 0x7f396f7d8956 in applyImpl<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1148:12
    #73 0x7f396f7d8956 in apply<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1154:12
    #74 0x7f396f7d8956 in mozilla::detail::RunnableMethodImpl<mozilla::dom::Document*, void (mozilla::dom::Document::*)(), true, (mozilla::RunnableKind)0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1201:13
    #75 0x7f396db63632 in mozilla::SchedulerGroup::Runnable::Run() /builds/worker/checkouts/gecko/xpcom/threads/SchedulerGroup.cpp:143:20
    #76 0x7f396db91853 in mozilla::RunnableTask::Run() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:470:16
    #77 0x7f396db6c123 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:754:26
    #78 0x7f396db6b074 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:609:15
    #79 0x7f396db6b203 in mozilla::TaskController::ProcessPendingMTTask(bool) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:393:36
    #80 0x7f396db952f6 in operator() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:133:37
    #81 0x7f396db952f6 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:534:5
    #82 0x7f396db7e8f0 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1159:16
    #83 0x7f396db8559a in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:548:10
    #84 0x7f396e4bdbd6 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:87:21
    #85 0x7f396e428923 in MessageLoop::RunInternal() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:335:10
    #86 0x7f396e42883d in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:328:3
    #87 0x7f396e42883d in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:310:3
    #88 0x7f39721af0f8 in nsBaseAppShell::Run() /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:137:27
    #89 0x7f3973a27d33 in XRE_RunAppShell() /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:906:20
    #90 0x7f396e4beabc in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:237:9
    #91 0x7f396e428923 in MessageLoop::RunInternal() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:335:10
    #92 0x7f396e42883d in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:328:3
    #93 0x7f396e42883d in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:310:3
    #94 0x7f3973a2790f in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:738:34
    #95 0x560cd4633fb6 in content_process_main /builds/worker/checkouts/gecko/browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
    #96 0x560cd4633fb6 in main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:309:18
    #97 0x7f39836f60b2 in __libc_start_main /build/glibc-eX1tMB/glibc-2.31/csu/../csu/libc-start.c:308:16
Flags: in-testsuite?

Bugmon Analysis:
Unable to reproduce bug using the following builds:

mozilla-central 20210407094544-8f7e11867d56
mozilla-central 20210407031944-e06c2941cdfc
Removing bugmon keyword as no further action possible.
Please review the bug and re-add the keyword for further analysis.

Keywords: bugmon
Whiteboard: [bugmon:confirm] → [bugmon:confirmed]
Attached file testcase.zip
Attachment #9214131 - Attachment is obsolete: true
Whiteboard: [bugmon:confirmed] → [bugmon:confirm]

Bugmon Analysis:
Verified bug as reproducible on mozilla-central 20210407154702-269819a25f93.
The bug appears to have been introduced in the following build range:

Start: bf21f044ae70855a7407d7ac247b915dd65ae7a4 (20200622093556)
End: 7a13c77442451fdb9fd1032f605f1322a218702b (20200622094618)
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=bf21f044ae70855a7407d7ac247b915dd65ae7a4&tochange=7a13c77442451fdb9fd1032f605f1322a218702b

Whiteboard: [bugmon:confirm] → [bugmon:bisected,confirmed]

cc Emilio because the build range includes Bug 1646224.

Severity: -- → S3

Can I have a pernosco trace for this?

Blocks: 1646224
Flags: needinfo?(jkratzer)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #5)

Can I have a pernosco trace for this?

Sure thing. https://pernos.co/debug/KfvKetJzdiInMlkB2hFIOQ/index.html

Flags: needinfo?(jkratzer) → needinfo?(emilio)

In the test-case we end up dividing viewbox/viewport, which is inf/inf,
end up with NaN, and boom.

Assignee: nobody → emilio
Status: NEW → ASSIGNED

Thanks Jason!

Flags: needinfo?(emilio)

:emilio, since this bug contains a bisection range, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

It was really a pre-existing issue, but this test-case starts showing it with bug 1646224.

No longer blocks: 1646224
Flags: needinfo?(emilio)
Regressed by: 1646224
Has Regression Range: --- → yes
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2f2b7c9e14de
Deal with non-finite viewbox / viewports. r=longsonr
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/28427 for changes under testing/web-platform/tests
Whiteboard: [bugmon:bisected,confirmed] → [bugmon:bisected,confirmed], [wptsync upstream]
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Upstream PR merged by moz-wptsync-bot
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: