Bug 1703592 - Deal with non-finite viewbox / viewports. r=longsonr

In the test-case we end up dividing viewbox/viewport, which is inf/inf,
end up with NaN, and boom.

Differential Revision: https://phabricator.services.mozilla.com/D111325